syntax = "proto3";

option go_package = ".";

service ProductService {
  rpc CreateProduct(ProductWithCategoryId) returns (Product);
  rpc UpdateProduct(Product) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (CheckResponse);
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc ListProduct(GetAllRequest) returns (GetAllResponse);
  rpc SearchProduct(SearchProductRequest) returns (SearchProductResponse);
  rpc GetAllProductByCategoryId(GetProductsByCategoryIdRequest) returns (GetAllResponse);
  rpc CreateCategory(Category) returns (Category);
  rpc UpdateCategory(Category) returns (Category);
  rpc DeleteCategory(DeleteCategoryRequest) returns (CheckResponse);
  rpc GetCategory(GetCategoryRequest) returns (Category);
  rpc ListCategory(GetAllRequest) returns (GetAllCategoryResponse);
}

message Product{
  string id = 1;
  string ownerId = 2;
  string title = 3;
  string description = 4;
  int64 price = 5;
  int64 discount = 6;
  string picture = 7;
  string createdAt = 8;
  string updatedAt = 9;
  string deletedAt = 10;
}
message ProductWithCategoryId{
  string id = 1;
  string ownerId = 2;
  string title = 3;
  string description = 4;
  int64 price = 5;
  int64 discount = 6;
  string picture = 7;
  string categoryId = 8;
  string createdAt = 9;
  string updatedAt = 10;
  string deletedAt = 11;
}

message Category{
  string id = 1;
  string ownerId = 2;
  string name = 3;
  string image = 4;
  string createdAt = 5;
  string updatedAt =6;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteCategoryRequest {
  string id = 1;
}

message GetProductRequest{
  string id = 1;
}

message GetCategoryRequest{
  string id = 1;
}

message GetAllRequest{
  int64 page = 1;
  int64 limit = 2;
  string ownerId = 3;
}

message GetAllResponse{
  repeated Product products = 1;
  int64 count = 2; 
}

message GetAllCategoryResponse{
  repeated Category Categories = 1;
  int64 count = 2; 
}


message CheckResponse{
  bool check = 1;
}

message SearchProductRequest{
  int64 page = 1;
  int64 limit = 2;
  string title = 3;
  string ownerId = 4;
}

message SearchProductResponse{
  repeated Product products = 1;
  int64 count = 2;
}

message GetProductsByCategoryIdRequest{
  string categoryId = 1;
  int64 page = 2;
  int64 limit = 3;
}